--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@kaliber/build": "^0.0.102"
+    "@kaliber/build": "^0.0.102",
+    "@seznam/compose-react-refs": "^1.0.4"
   },
   "scripts": {
     "build": "NODE_ENV=production kaliber-build",
