Remove viewport related hooks, added use-observed-ref

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "contributors": [
     "Joost Kiens <joost@kaliber.net>",
     "Peeke Kuepers <peeke@kaliber.net> (https://peeke.nl)"
-  ]
+  ],
+  "dependencies": {
+    "@kaliber/use-observed-ref": "^1.0.0"
+  }
 }
